--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "parcel-plugin-static-files-copy": "^2.3.1"
   },
   "dependencies": {
-    "d3": "^5.15.0"
+    "d3": "^5.15.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "virtual-scroller": "^1.2.0"
   }
 }
