--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "parcel-plugin-static-files-copy": "^2.3.1"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "d3": "^5.15.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
